--- a/main.css
+++ b/main.css
@@ -1,10 +1,10 @@
-main{
+.top, .bottom{
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.play-btn, .help-btn, .settings-btn {
+.play-btn, .help-btn, .settings-btn, .replay-btn {
     display: block;
     background-color: red;
     border-radius: 50%;
