--- a/main.css
+++ b/main.css
@@ -1,8 +1,42 @@
-.top, .bottom{
+.top{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.bottom{
+    display: grid;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.potatoes-wrapper {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    z-index:3;
+}
+
+.powerupbg{
+    display:grid;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    z-index:1;
+    height:200px;
+    width:600px;
+    color: pink;
+}
+
+.powerupbg img{
+    border: 4px solid black;
+    border-radius: 50%;
 }
 
 .play-btn, .help-btn, .settings-btn, .replay-btn {
@@ -43,11 +77,6 @@ button:hover{
     -o-transform: scaleX(-1);
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
-}
-
-.potatoes-wrapper {
-    display: flex;
-    justify-content: center;
 }
 
 
@@ -101,4 +130,10 @@ canvas {
     display: block;
     margin: 0 auto;
     border: solid 6px #444;
-  }
+}
+
+.powerup-bg{
+    display:relative;
+    width: 800px;
+    height: 800px;
+}
