--- a/main.css
+++ b/main.css
@@ -1,5 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap');
 
+@keyframes scale {
+    0%{
+        transform: scale(0.4);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
+@keyframes slideIn {
+    0%{
+        transform: "";
+    }
+    100%{
+        transform: "";
+    }
+}
+
+@keyframes expand {
+    0%{
+        transform: scale(0.4);
+    }
+    100%{
+        transform: scale(1.8);
+        opacity: 20%
+    }
+}
+
+@keyframes shake {
+    0% { transform: translateX(0) }
+    25% { transform: translateX(5px) }
+    50% { transform: translateX(-5px) }
+    75% { transform: translateX(5px) }
+    100% { transform: translateX(0) }
+}
+
 body{
     font-family: 'Darumadrop One', cursive;
 }
@@ -41,7 +77,7 @@ p{
     grid-row-start: 1;
     z-index:1;
     height:200px;
-    width:600px;
+    width:800px;
     color: pink;
 }
 
@@ -158,10 +194,12 @@ button:hover{
 
 .keystroke[data-keystroke-status="correct"]{
     background-color:yellowgreen;
+    animation: expand 0.5s ease-out;
 }
 
 .keystroke[data-keystroke-status="missed"]{
     background-color: pink;
+    animation: shake 0.5s linear 0s;
 }
 
 /* .damage-points{
@@ -221,4 +259,11 @@ canvas {
 
 #potato-avatar-1 .big-dmg{
     right:-35px;
+}
+
+.big-dmg, .dmg-effect {
+    animation: scale 0.5s ease-out forwards;
+    /* animation-name:scale;
+    animation-duration: 1s;
+    animation-timing-function: ease-in; */
 }
