--- a/main.css
+++ b/main.css
@@ -285,7 +285,15 @@ canvas {
 
 .big-dmg, .dmg-effect {
     animation: scale 0.5s ease-out forwards;
-    /* animation-name:scale;
-    animation-duration: 1s;
-    animation-timing-function: ease-in; */
+}
+
+.multiplier{
+    position:absolute;
+    top:100px;
+    font-size: 16px;
+    color:green;
+}
+
+#potato-avatar-0 .multiplier{
+    right: 240px;
 }
