--- a/main.css
+++ b/main.css
@@ -68,7 +68,7 @@ body{
 
 p{
     margin: 0px;
-    display: inline-block;
+    /* display: inline-block; */
 }
 
 
@@ -287,13 +287,65 @@ canvas {
     animation: scale 0.5s ease-out forwards;
 }
 
-.multiplier{
+/* .show-multiplier-text{
     position:absolute;
     top:100px;
     font-size: 16px;
-    color:green;
+    color:orange;
+} */
+
+/* .show-powerup-text{
+    position:absolute;
+    top:150px;
+    font-size: 16px;
+    color:orange;
+} */
+
+/* #potato-avatar-0 .show-multiplier-text{
+    right: 240px;
+} */
+
+.dmg-details{
+    animation: scale 0.5s ease-out forwards;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    top: 0px;
+    z-index: 2;
+    margin-top: 28px;
+    justify-content: space-around;
+    align-content: center;
+    flex-wrap: wrap;
+    list-style-type: none;
+    white-space: nowrap;
+    color:red;
+    text-shadow: -1px 1px 0px rgb(9, 9, 9);
 }
 
-#potato-avatar-0 .multiplier{
-    right: 240px;
+#dmg-details-0{
+    right: 180px;
+}
+
+#dmg-details-1{
+    left: 170px;
+}
+
+.dmg-points{
+    font-size:40px;
+    text-align: center;
+}
+
+.show-multiplier-text{
+    color:orange;
+    rotate : 4deg;
+    text-align: center;
+}
+
+.subtext1{
+    font-size: 24px;
+}
+.show-powerup-text{
+    color: navy;
+    rotate: 4deg;
 }
