--- a/main.css
+++ b/main.css
@@ -45,12 +45,21 @@
     }
 }
 
-@keyframes attackAnimation {
+@keyframes moveRight {
     0%{
         transform: translateX(0px);
     }
     50%{
-        transform: translateX(20px);
+        transform: translateX(50px);
+    }
+}
+
+@keyframes moveLeft {
+    0%{
+        transform: translateX(0px);
+    }
+    50%{
+        transform: translateX(-50px);
     }
 }
 
@@ -62,6 +71,19 @@
     100% { transform: translateX(0) }
 }
 
+@keyframes jumping {
+    0% { transform: translateX(0px) translateY(0px);
+    }
+    25% { transform: translateX(10px) translateY(10px);
+        }
+    50% { transform: translateX(0px) translateY(0px); 
+        }
+    75% { transform: translateX(-10px) translateY(10px);
+        }
+    100% { transform: translateX(0px) translateY(0px);
+    }
+}
+
 .slide-in-animate{
     animation: slideIn 0.2s ease-in;
 }
@@ -70,10 +92,17 @@
     animation: collectDamage 0.2s ease-in;
 }
 
-.attack-animate{
-    animation: attackAnimation 0.2s ease-out;
+.move-right-animate{
+    animation: moveRight 0.2s ease-out;
 }
 
+.move-left-animate{
+    animation: moveLeft 0.2s ease-out;
+}
+
+.jumping-animate{
+    animation: jumping 1s ease-out infinite;
+}
 
 body{
     font-family: 'Darumadrop One', cursive;
@@ -303,6 +332,7 @@ canvas {
 
 .potato-avatar{
     position:relative;
+    /* animation: jumping 2s ease-out infinite backwards; */
 }
 
 #potato-avatar-0  .big-dmg{
